[package]
name = "antlr-rust"
version = "0.1.0"
authors = ["Konstantin Anisimov <rrevenantt@gmail.com>"]
homepage = "https://github.com/rrevenantt/antlr4rust"
repository = "https://github.com/rrevenantt/antlr4rust"
description = "ANTLR4 runtime for Rust"
edition = "2018"
license = "BSD-3-Clause"
keywords = ["ANTLR","ANTLR4","parsing","runtime"]
categories = ["parsing"]

[dependencies]
lazy_static = "1.4.*"
uuid = "0.6.*"
byteorder = "1"
murmur3 = "0.4"
bit-set = "0.5.*"
once_cell = "1.2.*"
backtrace = "0.3"
typed-arena = "2.0.*"

[lib]

#[[test]]
#name = "my_test"
#path="tests/my_test.rs"