[package]
name = "antlr-rust"
version = "0.3.0-beta"
authors = ["Konstantin Anisimov <rrevenantt@gmail.com>"]
homepage = "https://github.com/rrevenantt/antlr4rust"
repository = "https://github.com/rrevenantt/antlr4rust"
documentation = "https://docs.rs/antlr-rust"
description = "ANTLR4 runtime for Rust"
readme = "README.md"
edition = "2018"
license = "BSD-3-Clause"
keywords = ["ANTLR","ANTLR4","parsing","runtime"]
categories = ["parsing"]
exclude = ["/build.rs","/grammars","/templates"]


[dependencies]
lazy_static = "^1.4"
uuid = "=0.8.*"
byteorder = "^1"
murmur3 = "=0.4" # 0.5 is incompatible currently
bit-set = "=0.5.*"
once_cell = "^1.2"
#backtrace = "=0.3"
typed-arena = "^2.0"
better_any = "0.2.0-dev.1"
#better_any = "=0.1"
parking_lot = "0.11"
#qcell = { path="../qcell" }

[lib]

#[[test]]
#name = "my_test"
#path="tests/my_test.rs"


[profile.release]
#opt-level = 3
#debug = true